--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-discord.py
-torch
-torchvision
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
 numpy
 pillow
 opencv-python
+discord.py
 tqdm
 requests
