--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 torch==2.0.1+cpu
 torchvision==0.15.2+cpu
 -f https://download.pytorch.org/whl/torch_stable.html
-numpy
+numpy<2
 pillow
 opencv-python-headless
 discord.py
